--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -17,12 +17,12 @@
     <title>TinyApp</title>
   </head>
   <body>
-    <%- include('partials/_header') %>
+    <%- include('partials/_header') %> <!-- ? -->
     <main style="margin: 1em;">
       <h3>My URLs</h3>
       <table class="table">
         <thead>
-          <tr>
+          <tr> <!-- tr means Table Row-->
             <th scope="col">Short URL ID</th>
             <th scope="col">Long URL</th>
             <th scope="col">Delete</th>
@@ -32,7 +32,7 @@
           
           <% for (let id in urls) { %>
             <tr>
-              <td><%= id %></td>
+              <td><%= id %></td><!-- <%= id %> is a way to calling the key id-->
               <td><%= urls[id] %></td>
               <td>
                 <form action="/urls/<%= id %>/delete" method="POST">
