--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -25,6 +25,7 @@
           <tr> <!-- tr means Table Row-->
             <th scope="col">Short URL ID</th>
             <th scope="col">Long URL</th>
+            <th scope="col">Edit</th>
             <th scope="col">Delete</th>
           </tr>
         </thead>
