--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -21,7 +21,26 @@
           Short URL ID: <a href="/u/<%= id %>"><%= id %></a>
         </p>
       </div>
-      <div class="card-footer text-muted"></div>
+     
+      <div class="card-footer text-muted">
+        <h5 class="card-title">Edit</h5>
+        <div class="d-flex flex-row align-items-center justify-content-center flex">
+          <form class="form-inline" action="/urls/<%= id %>" method="POST">
+            <div class="form-group mb-2">
+              <label for="longURL">New URL:</label>
+              <input
+                class="form-control"
+                type="text"
+                name="longURL"
+                placeholder="http://"
+                style="width: 300px; margin: 1em"
+              />
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
+          </form>
+        </div>
+        
+      </div>
     </div>
     <!-- Bootstrap JS -->
     <script
