--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -17,6 +17,22 @@
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
+     
+        <form class="form-inline" action="/login" method="POST">
+          <div class="form-group mb-2">
+            
+            <input
+              class="form-control"
+              type="text"
+              name="username"
+              placeholder="Username"
+              style="width: 300px; margin: 1em"
+            />
+            <button type="submit" class="btn btn-outline-dark">Login</button>
+          </div>
+        </form>
+      
     </div>
+
   </nav>
 </header>
