--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -19,9 +19,9 @@
       </div>
     </div>
 
-    <%if (username) { %>
+    <%if (user) { %>
       <div class="navbar-nav">
-        <p class="text-start">Logged in as: <%= username %></p>
+        <p class="text-start">Logged in as: <%= user.email %></p>
         <form action="/logout" method="POST">
         <button type="submit" class="btn btn-outline-dark">Logout</button>
       </form>
