--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+
     <!-- Bootstrap CSS -->
     <link
       rel="stylesheet"
@@ -8,40 +14,36 @@
       integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
       crossorigin="anonymous"
     />
-    <title>URL - TinyApp Example</title>
+    <title>New URL - TinyApp Example</title>
   </head>
 
   <body>
     <%- include('partials/_header') %>
-    <div class="card text-center">
-      <div class="card-header"></div>
-      <div class="card-body">
-        <h5 class="card-title">TinyURL for: <%= longURL %></h5>
-        <p class="card-text">
-          Short URL ID: <a href="/u/<%= id %>"><%= id %></a>
-        </p>
-      </div>
-     
-      <div class="card-footer text-muted">
-        <h5 class="card-title">Edit</h5>
-        <div class="d-flex flex-row align-items-center justify-content-center flex">
-          <form class="form-inline" action="/urls/<%= id %>" method="POST">
-            <div class="form-group mb-2">
-              <label for="longURL">New URL:</label>
-              <input
-                class="form-control"
-                type="text"
-                name="longURL"
-                placeholder="http://"
-                style="width: 300px; margin: 1em"
-              />
-              <button type="submit" class="btn btn-primary">Update</button>
-            </div>
-          </form>
+
+    <main style="margin: 1em;">
+      <h4>Login</h4>
+      <form class="form-inline" action="/login" method="POST">
+        <div class="form-group mb-2">
+          <label for="longURL">Email</label>
+          <input
+            class="form-control"
+            type="email"
+            name="email"
+            placeholder=""
+            style="width: 300px; margin: 1em"
+          />
+          <label for="longURL">Password</label>
+          <input
+            class="form-control"
+            type="password"
+            name="password"
+            placeholder=""
+            style="width: 300px; margin: 1em"
+          />
+          <button type="submit" class="btn btn-primary">Login</button>
         </div>
-        
-      </div>
-    </div>
+      </form>
+    </main>
     <!-- Bootstrap JS -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -60,3 +62,4 @@
     ></script>
   </body>
 </html>
+
