--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -22,26 +22,29 @@
 
     <main style="margin: 1em;">
       <h4>Login</h4>
-      <form class="form-inline" action="/login" method="POST">
-        <div class="form-group mb-2">
-          <label for="longURL">Email</label>
+      <form action="/login" method="POST">
+        <div class="form-group mb-3">
+          <label for="email" class="form-label">Email</label>
           <input
             class="form-control"
             type="email"
             name="email"
-            placeholder=""
-            style="width: 300px; margin: 1em"
+            placeholder="Enter email"
+            style="width: 300px"
           />
-          <label for="longURL">Password</label>
+        </div>
+        <div class="form-group mb-3">
+          <label for="password" class="form-label">Password</label>
           <input
             class="form-control"
             type="password"
             name="password"
-            placeholder=""
-            style="width: 300px; margin: 1em"
+            placeholder="Password"
+            style="width: 300px"
           />
-          <button type="submit" class="btn btn-primary">Login</button>
         </div>
+          <button type="submit" class="btn btn-primary">Login</button>
+        
       </form>
     </main>
     <!-- Bootstrap JS -->
