--- a/views/urls_register.ejs
+++ b/views/urls_register.ejs
@@ -21,27 +21,29 @@
     <%- include('partials/_header') %>
 
     <main style="margin: 1em;">
-      <h4>Register</h4>
-      <form class="form-inline" action="/register" method="POST">
-        <div class="form-group mb-2">
-          <label for="longURL">Email</label>
+      <h4>Create Account</h4>
+      <form action="/register" method="POST">
+        <div class="form-group mb-3">
+          <label for="email" class="form-label">Email</label>
           <input
             class="form-control"
             type="email"
             name="email"
-            placeholder=""
-            style="width: 300px; margin: 1em"
+            placeholder="Enter email"
+            style="width: 300px"
           />
-          <label for="longURL">Password</label>
+        </div>
+        <div class="form-group mb-3">
+          <label for="password" class="form-label">Password</label>
           <input
             class="form-control"
             type="password"
             name="password"
-            placeholder=""
-            style="width: 300px; margin: 1em"
+            placeholder="Password"
+            style="width: 300px"
           />
-          <button type="submit" class="btn btn-primary">Submit</button>
         </div>
+        <button type="submit" class="btn btn-primary">Register</button>
       </form>
     </main>
     <!-- Bootstrap JS -->
