--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -34,7 +34,7 @@
           <% for (let id in urls) { %> 
             <tr>
               <td><%= id %></td><!-- <%= id %> is a way to calling the key id-->
-              <td><%= urls[id] %></td>
+              <td><%= urls[id].longURL %></td>
               <td>
                 <a href="/urls/<%= id %>">
                   <button type="edit" class="btn btn-outline-primary">Edit</button>
