set up analytics page

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -39,8 +39,27 @@
             </div>
           </form>
         </div>
-        
       </div>
+      <div class="card-header"></div>
+      <main style="margin: 5em;">
+      
+      <h3>Analytics</h3>
+      <table class="table">
+        <thead>
+          <tr> <!-- tr means Table Row-->
+            <th scope="col">Total Visitors Number</th>
+            <th scope="col">UNIQUE visitors</th>
+          </tr>
+        </thead>
+        <tbody>
+            <tr>
+              <td><%= times %></td><!-- <%= id %> is a way to calling the key id-->
+              <td></td>
+              
+            </tr>
+        </tbody>
+      </table>
+      </main>
     </div>
     <!-- Bootstrap JS -->
     <script
