modified get /urls/:id

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -53,7 +53,7 @@
         </thead>
         <tbody>
             <tr>
-              <td><%= times %></td><!-- <%= id %> is a way to calling the key id-->
+              <td></td><!-- <%= id %> is a way to calling the key id-->
               <td></td>
               
             </tr>
