add analytics to show total visit

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -49,7 +49,7 @@
           </thead>
           <tbody>
             <tr>
-              <td></td><!-- <%= id %> is a way to calling the key id-->
+              <td><%= total %></td><!-- <%= id %> is a way to calling the key id-->
               <td></td>
 
             </tr>
