add short URL created time

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -44,14 +44,15 @@
             <tr>
               <!-- tr means Table Row-->
               <th scope="col">Total Visitors Number</th>
+              <th scope="col">Created Time</th>
               <th scope="col">UNIQUE visitors</th>
             </tr>
           </thead>
           <tbody>
             <tr>
               <td><%= total %></td><!-- <%= id %> is a way to calling the key id-->
+              <td><%= time %></td>
               <td></td>
-
             </tr>
           </tbody>
         </table>
